# sigspace

./: .gitignore  README.md  example.py  example_gsea.py  pyproject.toml
benchmark/: analyze_embeddings.py  compare_embeddings.py  compare_match_rankings.py  compare_moa_rankings.py  finalize_analysis_plots.py
experiments/config/: drugs.txt  summary_comparison.yaml  summary_comparison_inhibitor.yaml
experiments/config/launcher/: joblib.yaml
experiments/scripts/: benchmark.py  run_benchmark.py  summary_comparison.py
gsea/: build_gsea_anndata.py  build_gsea_anndata_fast.py  parallel_gsea.R
kNN_experiments/: knn_llm_scatterplot.py  knn_moa_ranking_gsea.py  knn_moa_ranking_gsea_v2_correct.py  knn_moa_ranking_vision.py  knn_moa_ranking_vision_v2_correct.py
tahoe_agent/: __init__.py  _constants.py  llm.py  logging_config.py  paths.py  utils.py
tahoe_agent/agent/: __init__.py  _prompts.py  base_agent.py
tahoe_agent/model/: __init__.py  retriever.py
tahoe_agent/task/: __init__.py  base_task.py
tahoe_agent/tool/: __init__.py  base_tool.py  drug_ranking.py  gsea_scores.py  moa_ranking.py  tool_registry.py  vision_scores.py
tahoe_agent/tool/tool_description/: vision_scores.py
tests/: test_tools.py
