[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61", "wheel" ]

[project]
name = "tahoe-agent"
version = "0.0.0"
description = "A minimal agent implementation based on Biomni"
readme = "README.md"
keywords = [ "agent", "ai", "langchain", "llm" ]
license = { text = "MIT" }
authors = [
  { name = "Tahoe Agent", email = "contact@tahoe-agent.dev" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "langchain-anthropic>=0.1",
  "langchain-core>=0.2",
  "langchain-google-genai>=1",
  "langchain-ollama>=0.1",
  "langchain-openai>=0.1",
  "langgraph>=0.2",
  "openai>=1",
  "pandas>=2",
  "pydantic>=2",
  "typer>=0.9",
  "typing-extensions>=4",
]

optional-dependencies.dev = [ "coverage", "mypy", "pre-commit", "pytest", "pytest-cov", "ruff" ]
urls.Documentation = "https://tahoe-agent.readthedocs.io"
urls.Homepage = "https://github.com/example/tahoe-agent"
urls.Repository = "https://github.com/example/tahoe-agent"

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "tahoe_agent*" ]

[tool.black]
line-length = 120
target-version = [ 'py39' ]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
